Revert to 33090ebdce3d7197ce0ed8c83a799b8488fe9cce

--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,12 @@
 {
-    "name": "Local JSON validator with Private Key extractor and signature generator ",
+    "name": "Local JWT Decoder",
     "version": "1.0.0",
-    "description": "This is an extension to validate JSON, extract Private key and generate signature via Your Chrome extension locally",
+    "description": "This is an extension to decode JWT Token via Your Chrome extension locally",
     "manifest_version": 3,
     "author": "Santoshkumar Chandrabhan Pandey",
     "action": {
-        "default_icon": "JSONIcon.png",
+        "default_icon": "localJWTDecoder.png",
         "default_popup": "index.html",
-        "default_title": "Local JSON validator"
+        "default_title": "Local JWT Decoder"
     }
 }
